objects/Lot_Start_Delay_Maintenance__c.object
<CustomObject>
    <description>The Lot Start Delay Maintenance will hold the delay value for each Tapeout Type, Year, Geometry and Quarter. This lookup table is used for the Forecast Lot Start Date computation on the Device object.</description>
    <fields>
        <fullName>Geometry__c</fullName>
        <label>Geometry</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_1_Delay__c</fullName>
        <label>Quarter 1 Delay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter_2_Delay__c</fullName>
        <label>Quarter 2 Delay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter_3_Delay__c</fullName>
        <label>Quarter 3 Delay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tapeout_Type__c</fullName>
        <label>Tapeout Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lot Start Lead Time Maintenance</label>
    <listViews>
        <fullName>Lot_Start_Delay_2013</fullName>
        <columns>NAME</columns>
        <columns>Tapeout_Type__c</columns>
        <columns>Year__c</columns>
        <columns>Geometry__c</columns>
        <columns>Quarter_1_Delay__c</columns>
        <columns>Quarter_2_Delay__c</columns>
        <columns>Quarter_3_Delay__c</columns>
        <columns>Quarter_4_Delay__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2013</value>
        </filters>
        <label>Lot Start Delay 2013</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Lot_Start_Delay_2014</fullName>
        <columns>NAME</columns>
        <columns>Tapeout_Type__c</columns>
        <columns>Year__c</columns>
        <columns>Geometry__c</columns>
        <columns>Quarter_1_Delay__c</columns>
        <columns>Quarter_2_Delay__c</columns>
        <columns>Quarter_3_Delay__c</columns>
        <columns>Quarter_4_Delay__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2014</value>
        </filters>
        <label>Lot Start Delay 2014</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Lot_Start_Delay_2015</fullName>
        <columns>NAME</columns>
        <columns>Tapeout_Type__c</columns>
        <columns>Year__c</columns>
        <columns>Geometry__c</columns>
        <columns>Quarter_1_Delay__c</columns>
        <columns>Quarter_2_Delay__c</columns>
        <columns>Quarter_3_Delay__c</columns>
        <columns>Quarter_4_Delay__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <label>Lot Start Delay 2015</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lot_Start_Leadtime_2016</fullName>
        <columns>NAME</columns>
        <columns>Tapeout_Type__c</columns>
        <columns>Year__c</columns>
        <columns>Geometry__c</columns>
        <columns>Quarter_1_Delay__c</columns>
        <columns>Quarter_2_Delay__c</columns>
        <columns>Quarter_3_Delay__c</columns>
        <columns>Quarter_4_Delay__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>Lot Start Leadtime 2016</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>LSDM-{0000}</displayFormat>
        <label>Lot Start Delay Maintenance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lot Start Lead Time Maintenances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>